# FS2024-Display-Emulator

./: .clang-format  .clang_format  CMakeLists.txt  README.md  vcpkg.json
include/: Emulator.h
src/: main.cpp
src/Application/: Application.cpp  Application.hpp  Layer.hpp
src/FileDialog/: FileDialog.hpp
src/FsShims/: FsCore.hpp  FsStructs.hpp  FsVars.cpp  FsVars.hpp  SimParamArrayHelper.hpp
src/GaugeLoader/: GaugeLoader.cpp  GaugeLoader.hpp
src/InstrumentRenderer/: InstrumentRenderer.cpp  InstrumentRenderer.hpp
